<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Thời đại 4.0 </string>

    <string name="Open">Open</string>
    <string-array name="planets_array">
        <item>CNTT</item>
        <item>KT</item>
        <item>ASM</item>


    </string-array>


    <string name="Close">Close</string>
    <string name="app_name2" tools:ignore="DuplicateDefinition">MaterialLoginPage</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
</resources>
